<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Expense Tracker</string>
    <string name="action_settings">ຕັ້ງຄ່າ</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">ຍິນດີຕ້ອນຮັບ!</string>
    <string name="welcome_first_page">ທ່ານສາມາດຕິດຕາມລາຍຈ່າຍຂອງທ່ານໃນເວລາໃດກໍໄດ້! ເບີ່ງລາຍຈ່າຍຕາມວັນ, ອາທິດ ແລະ ເດືອນ!</string>
    <string name="second_page_desc">ເບິ່ງສະຖິຕິເພື່ອລະບຸວິທີປະຢັດເງິນ</string>
    <string name="third_page_desc">ຕັ້ງການແຈ້ງເຕືອນເມືອເຖິງເວລາທີ່ກໍາຫນົດໄວ້.</string>
    <string name="money_desc">money_icon</string>
    <string name="credit_card_content_desc">credit card icon</string>
    <string name="saving_money_content_desc">saving money icon</string>
    <string name="expenses">ລາຍຈ່າຍ</string>
    <string name="income">ລາຍຮັບ</string>
    <string name="categories">ປະເພດ</string>
    <string name="statistics">ສະຖິຕິ</string>
    <string name="reminders">ເຕືອນຄວາມຈໍາ</string>
    <string name="confirm">ຍືນຍັນ</string>
    <string name="delete">ລົບ</string>
    <string name="confirm_delete">ທ່ານແນ່ໃຈ ຫລື ບໍ່ວ່າຕ້ອງການລົບລາຍການນີ້ແທ້ບໍ?</string>
    <string name="save">ບັນທຶກ</string>
    <string name="create_category">ສ້າງປະເພດ</string>
    <string name="cancel">ຍົກເລີກ</string>
    <string name="today">ມື້ນີ້</string>
    <string name="week">ອາທິດ</string>
    <string name="month">ເດືອນ</string>
    <string name="error_total">ກະລຸນາໃສ່ຈໍານວນມູນລະຄ່າ</string>
    <string name="description">ຄໍາອະທິບາຍ</string>
    <string name="add_new_expense">ເພີ່ມລາຍຈ່າຍໃຫມ່</string>
    <string name="optional_description">ຄໍາອະທິບາຍ (ບໍ່ໃສ່ກໍໄດ້)</string>
    <string name="total">ຮວມ</string>
    <string name="confirm_delete_items">ທ່ານຕ້ອງການລົບລາຍຈ່າຍນີ້ແທ້ບໍ?</string>
    <string name="confirm_delete_expense">ທ່ານຕ້ອງການລຶບລາຍຈ່າຍນີ້ແທ້ບໍ?</string>
    <string name="expense_prefix">- <xliff:g id="amount" example="100.00">%s</xliff:g></string>
    <string name="income_prefix">+ <xliff:g id="amount" example="100.00">%s</xliff:g></string>
    <string name="country_currency">ສະກຸນເງິນຂອງປະເທດ</string>
    <string name="pref_country_key">country_key</string>
    <string name="default_country">LA</string>
    <string name="title_activity_expense_detail">ExpenseDetailActivity</string>
    <string name="tv_title_transition">tvTotalTransition</string>
    <string name="date_placeholder">date placeholder</string>
    <string name="to_date">ເລີ່ມວັນທີ່</string>
    <string name="date_from">ເຖິງວັນທີ່</string>
    <string name="categories_percentage">ສ່ວນຮ້ອຍຕາມປະເພດ</string>
    <string name="total_expenses_per_category">ລາຍຈ່າຍທັງຫມົດແບ່ງຕາມປະເພດ</string>
    <string name="Save">ບັນທຶກ</string>
    <string name="hour_format"><xliff:g id="hour" example="09">%02d</xliff:g>:<xliff:g id="minute" example="09">%02d</xliff:g></string>
    <string name="reminder_name_validation">ກະລຸນາໃສ່ຊື່ການແຈ້ງເຕືອນ</string>
    <string name="pick_day_of_month">ເລືອກມື້ຂອງເດືອນ</string>
    <string name="confirm_reminder_delete">ທ່ານແນ່ໃຈບໍ່ວ່າຈະລົບການແຈ້ງເຕືອນນີ້?</string>
    <string name="this_week">ອາທິດນີ້</string>
    <string name="reminder_name_hint">ຕົວຢ່າງ: ຈ່າຍຄ່າໄຟ</string>
    <string name="reminder_schedule_title">ການແຈ້ງເຕືອນນີ້ຈະຈັດເວລາສໍາຫລັບ (ວັນຂອງເດືອນ):</string>
    <string name="reminder_time_sent_title">ຈະແຈ້ງເຕືອນໃນ: (ເວລາຂອງວັນ)</string>
    <string name="reminder_help">ສ້າງການເຕືອນຄວາມຈໍາເພື່ອຊ່ວຍເຮັດການແຈ້ງເຕືອນທ່ານໃນມື້ຂອງທຸກໆເດືອນກ່ຽວກັບກໍາຫນົດເວລາການຊໍາລະຄ່າທີ່ຈ້ອງຈ່າຍ.\n ການແຈ້ງເຕືອນຈະປາກົດຂຶ້ນເມື່ອຮອດເວລາ. \nຈືໄວ້ວ່າທ່ານສາມາດປິດມັນເມື່ອໃດໄດ້.</string>
    <string name="create_a_reminder">ສ້າງການເຕືອນຄວາມຈໍາ</string>
    <string name="edit_a_reminder">ແກ້ໄຂການເຕືອນຄວາມຈໍາ</string>
    <string name="expense_detail">ລາຍລະອຽດລາຍຈ່າຍ</string>
    <string name="same_category_this_week">ປະເພດດຽວກັນໃນອາທິດນີ້</string>
    <string name="already_accepted_user_key" translatable="false">already_accepted_user</string>
    <string name="start_using_expense">ເລີ່ມໃຊ້ Expense Tracker</string>
    <string name="reminders_empty">ຍັງບໍ່ມີການເຕືອນຄວາມຈໍາເທື່ອ. ກະລຸນາສ້າງການເຕືອນຄວາມຈໍາເພື່ອບໍ່ໃຫ້ລືມວັນສໍາຄັນ</string>
    <string name="categories_empty">ຍັງບໍ່ມີປະເພດເທື່ອ. ກະລຸນາສ້າງປະເພດເພື່ອຈະໄດ້ຂໍ້ມູນສະຖິຕິການໃຊ້ຈ່າຍ.</string>
    <string name="no_chart_data">ບໍ່ມີຂໍ້ມູນ</string>
    <string name="no_categories_error">ກະລຸນາສ້າງປະເພດເພື່ອເລີ່ມບັນທຶກການໃຊ້ຈ່າຍ</string>
    <string name="today_expenses_total">ມື້ນີ້: %</string>
    <string name="no_expenses_today">ຍັງບໍ່ມີລາຍຈ່າຍສໍາຫລັບມື້ນີ້</string>
    <string name="start">ເລີ່ມ</string>
    <string name="hint_category">ຕົວຢ່າງ: ອາຫານ</string>
    <string name="error_name">ກະລຸນາໃສ່ຊື່</string>
    <string name="pick_dates">ເລືອກວັນທີ່</string>
    <string name="edit_category">ແກ້ໄຂປະເພດ</string>
    <string name="history">ປະຫວັດ</string>
    <string name="action_help">ຊ່ວຍເຫລືອ</string>
    <string-array name="reminder_days_available">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>
</resources>